prepare to support webgpu

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta http-equiv="origin-trial" content="AtaPcs85GAQLEMk4PnxB6jmeMr8Mti6j4gS9X5s48K1kX62IZHCnQv5mtMHMxlQx+FVLnqSvs38xjLJdHXqMYgcAAABJeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwMDAiLCJmZWF0dXJlIjoiV2ViR1BVIiwiZXhwaXJ5IjoxNjc1MjA5NTk5fQ==">
         <title>x-render sandbox application</title>
     </head>
     <body>
